[tool.poetry]
name = "bookstoreapp"
version = "0.1.0"
description = "Bookstore API"
authors = ["RBxRobson <robsonnbarbosa0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
